--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
      -->
      <section>
         <div>
-            <h2 class="text-center ">exam all note and all importans note</h2>
+ 
+            <h2 class="text-center text-danger">web page are comming soon...</h2>
+            <h3 class="text-center text-warning">for demo view<h2>
+                       <h2 class="text-center ">exam all note and all importans note</h2>
             <div class="container">
                 <div class="row my-4">
                     <div class="col-lg-6 col-sm-12 my-3">
